CRUD-App-Tasks-MongoDb-Flask/kubernetes/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-mongo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: aleksandarstojanov/kiii-project-crud-app-docker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
